# primer-parcial-martinez-londero-vargas

./: CMakeLists.txt  README.md  main.cpp  raylibTemplate.data  raylibTemplate.js  raylibTemplate.js.orig.js  raylibTemplate.wasm
clases/: Animator.cpp  Animator.h  AnimatorFactory.h  BadCoin.cpp  BadCoin.h  BadCoin_Strategy.cpp  BadCoin_Strategy.h  Bullet.cpp  Bullet.h  Buttons.cpp  Buttons.h  Character.cpp  Character.h  Coin.cpp  Coin.h  Coin_Strategy.cpp  Coin_Strategy.h  Context.cpp  Context.h  Decorator_Coin.cpp  Decorator_Coin.h  Drone.h  EndGame.cpp  EndGame.h  Enemy.cpp  Enemy.h  EnemyFactory.h  Game.cpp  Game.h  GameOver.cpp  GameOver.h  GameState.cpp  GameState.h  GameStruct.h  GoodCoin.cpp  GoodCoin.h  Main_Character.cpp  Main_Character.h  Mananger.h  Map.cpp  (+13 more)
resources/: sheet.tsx  tiles.json  tilesfinal..tmx  tilesfinal.tmx  tilesjson.tmx  tilesjson2.tmx
resources/Level/: CyberTileA4.tsx  personaje.tmx  roguelikeCity_magenta.tsx  tiles.json  tiles2.0.tmx  tileset.tsx  tilesfinal1.json
